Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DeepFocus Studio V3.1</title>
+    <title>NocDeepFocus Studio</title>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
 
@@ -197,7 +197,7 @@
     <div id="login-overlay">
         <div class="login-box">
             <h2 style="margin-bottom: 10px; letter-spacing: 2px;" class="scramble-target">DEEP FOCUS</h2>
-            <p style="color: #999; font-size: 0.8rem;">SECURE STUDIO ACCESS</p>
+            <p style="color: #999; font-size: 0.8rem;">NOCTURNUS DEEPFOCUS</p>
             
             <div id="id-container">
                 <input type="text" id="login-id" class="login-input" placeholder="ENTER ID">
@@ -706,3 +706,4 @@
     </script>
 </body>
 </html>
+
